# eps

./: .gitignore  ChangeLog.md  Makefile  README.md  elm.json  eps.cabal  index.html  package.yaml  shell.nix  stack.yaml
app/: Main.hs
nix/: stackPackages.nix
nix/binwrap/: default.nix  node-packages.nix
nix/elm-test/: default.nix  node-packages.nix
src/: Lib.hs  Main.hs
src/elm/: Main.elm
src/haskell/: Main.hs  Search.hs  Server.hs
src/haskell/Data/: Package.hs  Ref.hs
src/haskell/NLP/: Stemmer.hs
src/haskell/Search/: Result.hs  ResultInfo.hs
src/haskell/Token/: Docs.hs  Name.hs  Stemmer.hs  TypeSig.hs  Util.hs  Value.hs  ValueName.hs
src/haskell/lib/: Lib.hs  Mock.hs  Search.hs
src/haskell/lib/Data/: Index.hs  Package.hs
src/haskell/lib/Token/: Docs.hs  Name.hs  TypeSig.hs
test/Spec/Token/: TypeSig.hs
test/Token/: TypeSigSpec.hs
