name:           eps
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/rl-king/eps#readme>
homepage:       https://github.com/rl-king/eps#readme
bug-reports:    https://github.com/rl-king/eps/issues
author:         Ruben Lie King
maintainer:     hello@rubenlieking.com
copyright:      2018 Ruben Lie King
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/rl-king/eps

executable eps
  main-is: Main.hs
  other-modules:
      Paths_eps
  hs-source-dirs:
      src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , aeson
    , bytestring
    , directory
    , http-client
    , http-client-tls
  default-language: Haskell2010

-- test-suite eps-test
--   type: exitcode-stdio-1.0
--   main-is: Spec.hs
--   other-modules:
--       Paths_eps
--   hs-source-dirs:
--       test
--   ghc-options: -threaded -rtsopts -with-rtsopts=-N
--   build-depends:
--       base >=4.7 && <5
--     , eps
--   default-language: Haskell2010
